[package]
name = "rms"
version = "0.1.0"
edition = "2021"


[dependencies]

rand = "0.8.4"
pwhash = "1"

derive_more = "0.99.0"
dotenv = "0.15.0"

chrono = { version = "0.4", features = ["serde"] }

actix = "0.13.0"
actix-web ="4.2.1"
sqlx = { version = "0.6.2", features = ["runtime-actix-native-tls", "postgres"]}

serde = { version = "1.0.145" , features = ["derive"]}
serde_json = "1.0.86"

hyper = "0.11"
futures-util = "0.3.28"
